test/regress/cov6-txact-unexpected-char.test
; Coverage for textual_xacts.cc unexpected char after posting

2024/01/01 Test
    Expenses:Food    $10.00 xyz
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 4:
While parsing posting:
  Expenses:Food    $10.00 xyz
                   ^^^^^^^^^^
Error: Unexpected char 'x' (Note: inline math requires parentheses)
end test
